@@ -65,10 +65,7 @@ duplication of effort and to make sure our changes merge easily.
 ** Allow clicking on a point to make that point.
 ** Use the MBX (multi buffering) and SHM (shared memory) extensions in the
   board window, if available.
-** Add Gnome support.  This may also allow us to fix the problem of being
-  unresponsive to X events during long computations, which I don't think
-  is worth fixing until then.  Better to wait until Gnome is rock solid,
-  I think.
+** Add Gnome support.  Better to wait until Gnome is rock solid, I think.
 *** Add silly bells and whistles.  Things like colour selector for chequer
   colours, angle of light, surface of pieces, transparent background, etc.
 *** Add menus and dialogs so that games can be played without the
@@ -77,7 +74,7 @@ duplication of effort and to make sure our changes merge easily.
 * Bugs:
 ** Rollout(), CommandTrainTD(), CommandDatabaseGenerate() and
   CommandDatabaseTrain() shouldn't output progress reports to stdout
-  if it isn't a TTY.
+  if it isn't a TTY. (gary)
 ** Think about what should happen with variance reduction in Rollout()
   when a probability turns out <0 or >1.
 ** When X and readline are enabled, using the board window to play
@@ -92,22 +89,16 @@ duplication of effort and to make sure our changes merge easily.
   until input is ready).  Also, what happens when the user types half
   a command and then moves with the mouse which causes the manual dice
   prompt?  "set delay" is related to this; other things should happen
-  while waiting for the delay.  The simplest fix is probably to enable
-  asynchronous I/O on the X connection so we get a SIGIO and set a flag
-  in the signal handler.  Slow code can then poll this flag (as we do
-  for fInterrupt) and call a routine to handle certain X events
-  immediately.  Some X events (those that cause immediate command
-  execution) shouldn't be handled immediately because of reentrancy
-  problems, but we can cope with the important Expose and KeyPress
-  ones. (gary)
-** The interrupt key doesn't work from the board window during a long
-  computation (the process is too busy doing other things and never
-  notices the key press in the event queue).  This is tricky to fix
-  and probably needs better event handling everywhere. (gary)
+  while waiting for the delay. (gary)
 ** When the interrupt key is pressed during processing in response to
   a board window event, "(Interrupted)" is not shown. (gary)
 ** Make sure that ComputerMove() updating anBoard and the call to
   NextTurn() are atomic, even if a SIGINT occurs. (gary)
+** Nothing handles running out of memory gracefully.  A solution
+  could be to write a malloc() wrapper that (if malloc fails) first
+  tries to free memory (e.g. flush the eval cache); if malloc still
+  doesn't succeed, then print an error message and longjmp() to the
+  main loop.
 
 * Documentation:
 ** Complete the Texinfo manual.  Perhaps for now, only things that are
@@ -127,3 +118,4 @@ duplication of effort and to make sure our changes merge easily.
   The SGF format (Smart Game Format -- see <http://www.red-bean.com/sgf/>)
   can probably be extended to backgammon, instead.
 ** Export matches (and analysis) to ASCII, HTML, PostScript, etc.
+** mtrace() debugging at some point. (gary)
