@@ -1,3 +1,8 @@
+Wed Jan 19 09:59:02 2000  Gary Wong  <gary@cs.arizona.edu>
+
+	* gnubg.c (HandleIO): Handle X events asynchronously.  Many other
+	small related changes.
+
 Mon Jan 17 15:25:14 2000  Gary Wong  <gary@cs.arizona.edu>
 
 	* gnubg.c (CommandRollout): Label the standard error as such, rather
